# ups-shutdown-daemon

./: CHANGELOG.md  Cargo.toml  README.md  README_1.04.md  config.toml  send-ups-traps.py  ups-shutdown-daemon.service  ups-traps.logrotate
src/: README.md  config.rs  main.rs  manager.rs  snmp.rs  trap.rs
