[package]
name = "ups-shutdown-daemon"
version = "1.5.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = [
    "macros", "rt", "net", "time", "process", "io-util",
] }
syslog = "6.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
clap = { version = "4.4", features = ["derive"] }
nix = { version = "0.27", features = ["reboot", "user", "fs"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"